@@ -1,6 +1,8 @@
 0.41    
         Added backlinks link to navbar.
         Added some anti-robot tags to certain pages.
+        Fixed bug in install procedure - blank script_name should now get
+          installed as index.cgi
 
 0.40    18 September 2004
         Recent Changes now shows changes in the past 24 hours, past week,
